# AIRI-2026-Proposal

./: LICENSE  README.md
Experiment/: .gitignore
Experiment/Results/: embeddings_index.json  metrics.json  pool.json  proxy.csv  report.md  retrieval_examples.csv
Experiment/Results/interactive/: pca_2d_cls.html  pca_2d_concat.html  pca_2d_raw_cls.html  umap_cls.html  umap_concat.html  umap_raw_cls.html
Experiment/Source/: 00_select_pool.py  01_extract_embeddings.py  02_compute_proxy.py  03_visualize_latent.py  04_retrieval_eval.py  README.md  _common.py  pyproject.toml  requirements.txt  run.sh
Research Proposal/: Zhivotenko-RP.md
Research Proposal/Articles/: 10.1038_s41467-025-59952-3-citation.ris  10.1038_s42256-023-00628-2-citation.ris
Utils/: md_to_pdf.py  requirements.txt  style.css
